@@ -1,3 +1,9 @@
+Sat Nov  3 13:01:02 2012  Kouhei Sutou  <kou@cozmixng.org>
+
+	* test/rexml/test_encoding.rb (EncodingTester#test_in_different_out):
+	  Fix a test that expects encoding in XML declaration is changed by
+	  Output's encoding. It is dropped feature.
+
 Sat Nov  3 12:54:13 2012  Kouhei Sutou  <kou@cozmixng.org>
 
 	* test/rexml/test_core.rb (Tester#test_ticket_88): Follow the
